<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/buttonBackToMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/back_to_menu" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMessages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@android:color/white"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/editTextMessage"
            style="@style/CustomEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:autofillHints="username"
            android:background="@drawable/rounded_edittext_background"
            android:hint="@string/hint_message"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:maxWidth="488dp"
            android:maxLines="1"
            android:padding="10dp"
            android:textColorHint="#757575" />

        <ImageButton
            android:id="@+id/buttonSend"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_send"
            android:contentDescription="@string/send_message"
            android:scaleType="fitCenter" />

    </LinearLayout>
</LinearLayout>
